# SonoControl

./: .gitignore  CHANGES.diff  CMakeLists.txt  FIX_NOTES.md  README.md  sonocontrol_tau_only_template.config  sonocontrol_template.config
include/: config.hpp  config_io.hpp  experiment.hpp  hyus_net.hpp  hyus_protocol.hpp  logger.hpp  pid.hpp  protocol.hpp  serial_port.hpp  temperature.hpp  udp_socket.hpp  version.hpp
resources/: version.rc
scripts/: build_debug.bat  build_debug.ps1  build_debug.sh  build_debug_gui.bat  build_debug_gui.ps1  build_debug_gui.sh  build_debug_gui_mingw.ps1  build_release.bat  build_release.ps1  build_release.sh  build_release_gui.bat  build_release_gui.ps1  build_release_gui.sh  deploy_windows_mingw.bat  deploy_windows_mingw.ps1  run_debug_gui_mingw.ps1
src/: config_io.cpp  experiment.cpp  hyus_net.cpp  hyus_protocol.cpp  logger.cpp  main.cpp  pid.cpp  protocol.cpp  serial_port.cpp  temperature.cpp  udp_socket.cpp
src/gui/: device_dialog.hpp  main_gui.cpp  web_server.cpp  web_server.hpp
